fix: LoanAdviceResponse 반환값 자리수 개선